Working HDD read on Praktik

--- a/XTIDE_Universal_BIOS/makefile
+++ b/XTIDE_Universal_BIOS/makefile
@@ -116,7 +116,7 @@ DEFINES_AT_LARGE = $(DEFINES_AT) $(DEFINES_COMMON_LARGE)
 DEFINES_XT_TINY = MODULE_STRINGS_COMPRESSED MODULE_8BIT_IDE NO_ATAID_VALIDATION
 DEFINES_386_8K = $(DEFINES_AT) USE_386
 
-DEFINES_PRAKTIK = $(DEFINES_XT_LARGE) MODULE_PRAKTIK_HACKS
+DEFINES_PRAKTIK = $(DEFINES_COMMON) MODULE_PRAKTIK_IDE MODULE_PRAKTIK_HACKS
 
 DEFINES_ALL_FEATURES = MODULE_8BIT_IDE MODULE_8BIT_IDE_ADVANCED MODULE_ADVANCED_ATA MODULE_EBIOS MODULE_BOOT_MENU MODULE_HOTKEYS MODULE_IRQ MODULE_SERIAL MODULE_SERIAL_FLOPPY MODULE_STRINGS_COMPRESSED MODULE_POWER_MANAGEMENT MODULE_COMPATIBLE_TABLES
 DEFINES_ALL_FEATURES += ELIMINATE_CGA_SNOW RELOCATE_INT13H_STACK RESERVE_DIAGNOSTIC_CYLINDER
